corrected image distorts on different screens

--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ a
     padding: 16px 8px;
     font-size: 22px;
 }
-a:hover
+a
 {
     color:#DC3545 ;
 
@@ -33,7 +33,7 @@ position: static;
 #overlay
 {
   #background-color: rgba(0, 0, 0, 0.6);
-    height: 100vh;
+    height: 70vh;
     display:flex;
     justify-content: center;
     align-items: center;
@@ -42,27 +42,20 @@ position: static;
 button
 {   
     font-family: cursive;
-    font-weight:600;
-    border-radius: 5px;
-    background-color: #DC3545;
-    margin: 5px;
-}
-button:hover
-{
+    font-size:10px;
+    border-radius: 9px;
     background-color: black;
-
-
+    margin: 5px;
+    width: 100%;
 }
-
-
 
 #bg-img
 {
-    background-image: url(revnickel.jpg);
-    background repeat: no-repeat;
-    background-size: cover;
-    height: 40vh; width: 80%;    
-}
+    background-image: url('revnickel.jpg');
+    background-repeat: no-repeat;
+    background-size:100% 50vh;
+    height: 70vh; width: 100%;  
+    margin: 2%;
 
 
 
